Add logging configuration and integrate SLF4J logging into test classes